[package]
name = "yt-popup-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
iced = { version = "0.13.1", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
youtube_chat = { git = "https://github.com/mtlkms/youtube_chat_rs" }
